Fix spacing closes #46

--- a/docs/src/css/content.css
+++ b/docs/src/css/content.css
@@ -108,6 +108,7 @@
 .Content-image {
   width: 100%;
   margin-top: var(--space-6);
+  margin-bottom: var(--space-3);
 }
 
 .Content-svg {
